TAG: qcreports_db-6-0-16-6
DATE: 09/04/2020
STAFF: lec
TR13186/add auto copyright for Cell Rep
TR13363/add J# to list of GXD electronic references

TAG: qcreports_db-6-0-16-5
DATE: 08/27/2020
STAFF: sc
TR13204/Infrastructure Release
pirsfloadRpt.csh calls python report scripts, but was not updated to use ${PYTHON}

TAG: qcreports_db-6-0-16-4
DATE: 08/26/2020
STAFF: lec
TR13204/Infrastructure Release
re-add http://wts.informatics.jax.org/wts_projects/11100/11105/GXD_EarlyEmbPapers.py

TAG: qcreports_db-6-0-16-3
DATE: 08/25/2020
STAFF: lec
mgd/GO_InvalidInferredFrom.py : check if inferredFrom = None

TAG: qcreports_db-6-0-16-2
DATE: 08/24/2020
STAFF: lec
TR13369/QC report of COV: tagged papers/weekly/BIB_Covid.py

TAG: qcreports_db-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: qcreports_db-6-0-15-9
DATE: 07/10/2020
STAFF: dbm
CHANGES:TR13348 - Move GXD_References.sql from weekly to daily

TAG: qcreports_db-6-0-15-8
TAG: qcreports_db-6-0-15-7
TAG: qcreports_db-6-0-15-6
TAG: qcreports_db-6-0-15-5
DATE: 05/13/2020
STAFF: sc
CHANGES:TR13265 - Variants QC reports: add checking for ref = var

TAG: qcreports_db-6-0-?
DATE: 
STAFF: 
CHANGES:
TR13204/Infrastructure/python 3
re-add http://wts.informatics.jax.org/wts_projects/11100/11105/GXD_EarlyEmbPapers.py

TAG: qcreports_db-6-0-15-4
TAG: qcreports_db-6-0-15-3
DATE: 12/30/2019
STAFF: sc
CHANGES: TR13205/GXD_Images.rpt

TAG: qcreports_db-6-0-15-2
TAG: qcreports_db-6-0-15-1
DATE: 12/02/2019
STAFF: lec
CHANGES: TR13007/RNA Sequence project

TAG: qcreports_db-6-0-14-13
TAG: qcreports_db-6-0-14-12
DATE: 09/19/2019
STAFF: sc
CHANGES:TR13173 - new variant report for Carol
1) weekly/ALL_Variant.py 
    produces a tab-delim report and a json report
    each with slightly different info
    ALL_Variant.rpt and ALL_Variant.json.rpt

TAG: qcreports_db-6-0-14-11
TAG: qcreports_db-6-0-14-10
TAG: qcreports_db-6-0-14-9
TAG: qcreports_db-6-0-14-8
DATE: 08/23/2019
STAFF: sc
CHANGES: TR13115 Variant Reports