@@ -203,30 +203,29 @@ be used at times to test reports for <I>future</I> public consumption.)
 
 <A NAME="go"> <B>GO (hjd, dph, jblake, dsitnikov, ln, mdolan)</B></A>
 <OL>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_RatNoGO.sql.rpt">Mouse Genes that have Rat/Human Homologs but no GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_MRK_NoGO.rpt">Mouse Genes with no GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_MRK_NoGO_Has_Alleles.rpt">Mouse Genes that have Alleles but no GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">Genes with no GO Annotations with references with GO status = Indexed but not yet annotated</A> <B>(dmitrys)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">Genes with only IEA GO Annotations with references with GO status = Indexed or Chosen but not yet annotated</A> <B>(ln)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_E.rpt">Genes with DO Annotations and either GO Annotations of evidence IEA only or no GO Annotations</A> <B>(ln)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_B.rpt">All Genes with Annotations to IDA, IGI, IMP, IPI</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_D.rpt">All Genes with multiple Annotations to IDA, IGI, IMP, IPI</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_EvidenceCodeStats.sql.rpt">Total # of Annotations by GO Evidence Code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/VOC_InvalidInferred.rpt">Invalid "Inferred From" Values in GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/VOC_InvalidProperties.rpt">Invalid "Properties" Values in GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_stats.rpt">GO Statistics</A>
-<LI><A HREF="/data/reports/qcreports_db/archive/go">Archive of GO Statistics and Reports</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOUnknown.rpt">All genes with 'unknown' annotations with new indexed literature</A> <B>(dph, krc)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_done.mgi">"Done" Genes with Literature</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_NotGene.sql.rpt">Non-Gene Markers with GO Annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/VOC_GOObsolete.rpt">Markers with Annotations to Obsolete GO Terms</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_EvidenceProperty.rpt">J:73065 GO annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_Combined_Report.rpt">Combined QC Report</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOAnnot.rpt">Total GO Annotations per Gene</A> <B>(jblake)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MGI_GenotypeDescriptions.rpt">Genotype Descriptions with MGI IDs</A> <B>(mdolan)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_GPI_verify.rpt">Verify GPI file</A> <B>(dph)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_InvalidInferredFrom.rpt">IC Annotations with Invalid GO IDs in With/Inferred From</A> <B>(hjd)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/WF_GO_FullCodeNoAnnot.rpt">Papers marked as Full-coded with no GO annotations</A> <B>(hjd)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOUnknown.rpt">QC: All genes with 'unknown' annotations with new indexed literature</A> <B>(dph, krc)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_done.mgi">QC: "Done" Genes with Literature</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_E.rpt">QC: Genes with DO Annotations and either GO Annotations of evidence IEA only or no GO Annotations</A> <B>(ln)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">QC: Genes with no GO Annotations with references with GO status = Indexed but not yet annotated</A> <B>(dmitrys)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">QC: Genes with only IEA GO Annotations with references with GO status = Indexed or Chosen but not yet annotated</A> <B>(ln)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_MRK_NoGO_Has_Alleles.rpt">QC: Mouse Genes that have Alleles but no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_RatNoGO.sql.rpt">QC: Mouse Genes that have Rat/Human Homologs but no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_MRK_NoGO.rpt">QC: Mouse Genes with no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_B.rpt">Report: All Genes with Annotations to IDA, IGI, IMP, IPI</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_D.rpt">Report: All Genes with multiple Annotations to IDA, IGI, IMP, IPI</A>
+<LI><A HREF="/data/reports/qcreports_db/archive/go">Report: Archive of GO Statistics and Reports</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_Combined_Report.rpt">Report: Combined QC Report</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_stats.rpt">Report: GO Statistics</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_InvalidInferredFrom.rpt">Report: IC Annotations with Invalid GO IDs in With/Inferred From</A> <B>(hjd)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/VOC_InvalidInferred.rpt">Report: Invalid "Inferred From" Values in GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/VOC_InvalidProperties.rpt">Report: Invalid "Properties" Values in GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_EvidenceProperty.rpt">Report: J:73065 GO annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/VOC_GOObsolete.rpt">Report: Markers with Annotations to Obsolete GO Terms</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_NotGene.sql.rpt">Report: Non-Gene Markers with GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/WF_GO_FullCodeNoAnnot.rpt">Report: Papers marked as Full-coded with no GO annotations</A> <B>(hjd)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_EvidenceCodeStats.sql.rpt">Report: Total # of Annotations by GO Evidence Code</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOAnnot.rpt">Report: Total GO Annotations per Gene</A> <B>(jblake)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_GPI_verify.rpt">Report: Verify GPI file</A> <B>(dph)</B>
 </OL>
 
 <A NAME="nomenclature"><B>Nomenclature (mmh)</B></A>
