@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-16-?
+DATE: 09/04/2020
+STAFF: lec
+TR13277/change short citation to longer citation on journal QC reports
+TR13356/re-label and re-sort GO QC reports
+TR13357/removal of GO QC report  (mgd/MGI_GenotypeDescriptions.py)
+
 TAG: qcreports_db-6-0-16-6
 DATE: 09/04/2020
 STAFF: lec
